# lgf-fullstack-evaluation

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: docker-compose.yml
app/services/backend/: Dockerfile  requirements.txt
app/services/backend/src/: main.py  models.py
app/services/backend/src/database/: database.py  models.py
app/services/backend/src/routers/: v1.py
app/services/database/: alembic.ini
app/services/database/alembic/versions/: 41569c792cf0_create_list_item_table.py  bfeffe225137_create_todo_list_table.py
app/services/frontend/: package-lock.json
app/web/: index.html
spec/: notes
