[tool.poetry]
name = "lgf-fullstack-evaluation"
version = "0.1.0"
description = "Response to Looking Glass Factory take home test"
authors = ["Angelo Tartanian <angelo.tartanian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.60.1"}
SQLAlchemy = "^1.4.25"
alembic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
